# srs-qa-assigment

./: .gitignore  Makefile  README.MD  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Config/: config.py  config.yaml
Pages/: base_page.py  login_page.py
Tests/: conftest.py
Tests/api_tests/: test_weatherstack.py
Tests/ui_tests/: test_login.py
config/: config.py  config.yaml
configs/: config.yaml
customer/: customer.py
data/: customer.py  test_data.py
doc/: API_TESTS.md  LOAD_TESTS.md  UI_TEST.md
driver/: webdriver_factory.py
locators/: locators.py  login_locators.py
locust/: home_page_load.py
locustfiles/: locustfile.py
pages/: base_page.py  cart_page.py  checkout_page.py  home_page.py  login_page.py  search_result_page.py
tests/: conftest.py
tests/api_tests/: test_api.py  test_weatherstack.py
tests/load_test/: test_load.py
tests/ui_tests/: test_base.py  test_cart.py  test_checkout.py  test_login.py  test_search.py
utils/: config_reader.py  customer_provider.py
